# ai-week-aug-2024

./: .gitignore  README.md
01-RAG/: loadData.py  query.py
02-MicrosoftTeamAIToolkit/01-basicbot/: README.md  package-lock.json  package.json  teamsapp.local.yml  teamsapp.yml
02-MicrosoftTeamAIToolkit/01-basicbot/appPackage/: manifest.json
02-MicrosoftTeamAIToolkit/01-basicbot/infra/: azure.parameters.json
02-MicrosoftTeamAIToolkit/01-basicbot/src/app/: app.ts
02-MicrosoftTeamAIToolkit/01-basicbot/src/prompts/chat/: skprompt.txt
02-MicrosoftTeamAIToolkit/02-syed-qa-bot/: package-lock.json  package.json  teamsapp.local.yml  teamsapp.yml
02-MicrosoftTeamAIToolkit/02-syed-qa-bot/appPackage/: manifest.json
02-MicrosoftTeamAIToolkit/02-syed-qa-bot/infra/: azure.parameters.json
02-MicrosoftTeamAIToolkit/02-syed-qa-bot/src/: config.ts
02-MicrosoftTeamAIToolkit/02-syed-qa-bot/src/app/: app.ts
02-MicrosoftTeamAIToolkit/02-syed-qa-bot/src/prompts/chat/: skprompt.txt
03-CrewAi/: .env_example  agents.py  pyproject.toml  tasks.py
04-AutoGen/01-BloggerAgent/: OAI_CONFIG_LIST.json  app.py  requirement.txt
04-AutoGen/01-BloggerAgent/coding/: Import necessary libraries  python code  stock_price_ytd.csv  tmp_code_9296df942f8d54d0dc46d6314fec4639.py
